--- a/02.使用dmo操作css.htm
+++ b/02.使用dmo操作css.htm
@@ -27,7 +27,7 @@
 
                 box1.style = "width:200px;width:300px;background-color:yellow"
 
-
+localStorage    
             }
         }
 
