--- a/02.使用dmo操作css.htm
+++ b/02.使用dmo操作css.htm
@@ -25,7 +25,7 @@
                 //box1.style.height = "20px";
                 /* 拿到sytle属性，直接复制，属于典型的element.attribute 格式设置属性值 */
 
-                box1.style = "width:200px;width:300px;background-color:yellow"
+                box1.style = "background-background-color：red"
 
  
             }
