--- a/03.读取元素得样式.html
+++ b/03.读取元素得样式.html
@@ -34,6 +34,9 @@
                                 第一个：需要获取的元素样式
                                 第二个：可以传递一个伪元素，一般都是null
                     该方法会返回一个对象，对象中封装了当前元素对应的样式
+                    可以通过对象.样式名来读取样式
+                    如果获取的样式没有制，则会获取到真实的值，而不是默认值
+                    但是该方法不支持IE8及以下的浏览器
                 */
 
                 var obj= getComputedStyle(box1,null);
