--- a/0.5鼠标异动.html
+++ b/0.5鼠标异动.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *div{
+        div.box1{
             width: 100px;
             height: 100px;
+            display: flex;
             background-color: red;
         }
     </style>
-    <script>    </script>
+    <script>   
+    
+    </script>
 </head>
 
 <body>
