--- a/0.5鼠标异动.html
+++ b/0.5鼠标异动.html
@@ -7,15 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div.box1{
+        #box1{
             width: 100px;
             height: 100px;
-            display: flex;
             background-color: red;
         }
     </style>
-    <script>   
-    
+    <script> 
+    /* 使用 */  
+    window.onload=function(){
+        var box1=document.getElementById("box1");
+        /* onmouseover() 用来获取鼠标移动信息 */
+        box1.onmouseout =function(){
+            box1.
+            
+        }
+
+    }
     </script>
 </head>
 
